[package]
name = "box2d"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.4", default-features = false, features = ['std'] }
box2d-rs = { git = "https://github.com/tenetcomputer/box2d-rs", features = ["serde_support"] }
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }
serde = "1.0"